[package]
name = "secure-messenger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rumqttc = "0.22.0"
uuid = { version = "1.3", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
pqcrypto-kyber = "0.7.8"
pqcrypto-traits = "0.3.5"
rand = "0.8"
x25519-dalek = "2.0.0"
chacha20poly1305 = "0.10.1"
base64 = "0.21.0"
chrono = "0.4"
colored = "2.0"
hex = "0.4"